tests/ui/issues/issue-28776.stderr
error[E0133]: call to unsafe function `std::ptr::write` is unsafe and requires unsafe function or block
  --> $DIR/issue-28776.rs:4:5
   |
LL |     (&ptr::write)(1 as *mut _, 42);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
